# simple-video-hosting

./: README.md  nginx.conf  postgre.sql
.config/k8s/: svh.yaml
.config/postgres/: init.sql
.github/workflows/: api.yaml  dev-api.yaml  dev-web.yaml  web.yaml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
services/backend/: Cargo.toml
services/backend/src/: auth.rs  db.rs  main.rs
services/frontend/src/: app.css
services/frontend/src/lib/: Navbar.svelte  stores.ts
services/frontend/src/routes/: +layout.svelte  +page.svelte
services/frontend/src/routes/clips/: +page.svelte
services/frontend/src/routes/shorts/: +page.svelte
services/frontend/src/routes/videos/: +page.svelte
services/frontend/src/routes/watch/: +page.svelte
web/: Dockerfile  nginx.conf  package-lock.json  package.json
web/src/: app.css
web/src/lib/: Navbar.svelte  VideoCard.svelte  VideoModal.svelte  stores.ts
web/src/routes/: +layout.svelte  +page.svelte
